used by bayo-core

--- a/example/index.html
+++ b/example/index.html
@@ -42,14 +42,7 @@
 <script type="module">
   import  * as otpus from './lib/otpus.esm.js'
   
-
-  // import { MBP } from './lib/meta-buffer-pack.esm.js'
-  // const NB = MBP.NB;
-  // const MB = MBP.MB;
-  // const MBA = MBP.MBA;
-  // let buffer = MBP.from([1,2,3])
-  // result.innerText = buffer
-  // console.log(buffer)
+//  otpus.webCryptoTest();
 
   evalBtn.addEventListener('click', e => {
     // console.log(code.value)
